crates/seele-composer/src/tests/snapshots/seele_composer__resolve__tests__resolve_submission@submission_simple.yaml.snap
---
source: crates/seele-composer/src/resolve.rs
expression: submission
input_file: crates/seele-composer/src/tests/submission_simple.yaml
---
Submission(
  id: "simple",
  root_directory: "test",
  config: SubmissionConfig(
    id: "simple",
    steps: {
      "one": {
        "status": "PENDING",
        "embeds": {},
      },
      "two": {
        "status": "PENDING",
        "embeds": {},
      },
      "three": {
        "status": "PENDING",
        "embeds": {},
      },
    },
  ),
  root_node: RootTaskNode(
    tasks: [
      TaskNode(
        name: ".one",
        children: [
          TaskNode(
            name: ".two",
            children: [
              TaskNode(
                name: ".three",
                children: [],
                ext: Config(
                  action: "seele/noop@1",
                  test: 3,
                ),
              ),
            ],
            ext: Config(
              action: "seele/noop@1",
              test: 2,
            ),
          ),
        ],
        ext: Config(
          action: "seele/noop@1",
          test: 1,
        ),
      ),
    ],
  ),
)
